globus-simple-ca (4.20-1+gt6.@distro@) @distro@; urgency=low

  * Increase default key size

 -- Globus Toolkit <support@globus.org>  Thu, 28 May 2015 07:53:08 -0400

globus-simple-ca (4.19-1+gt6.@distro@) @distro@; urgency=low

  * Add support for additional DN components

 -- Globus Toolkit <support@globus.org>  Thu, 02 Apr 2015 11:40:46 -0400

globus-simple-ca (4.18-1+gt6.@distro@) @distro@; urgency=low

  * Avoid make check failures when ~/.rnd is not writable

 -- Globus Toolkit <support@globus.org>  Tue, 18 Nov 2014 14:38:44 -0500

globus-simple-ca (4.17-1+gt6.@distro@) @distro@; urgency=low

  * Fix regression writing to cert dir

 -- Globus Toolkit <support@globus.org>  Mon, 10 Nov 2014 11:45:38 -0500

globus-simple-ca (4.16-1+gt6.@distro@) @distro@; urgency=low

  * Fix regression writing to cert dir

 -- Globus Toolkit <support@globus.org>  Mon, 10 Nov 2014 10:42:16 -0500

globus-simple-ca (4.15-1+gt6.@distro@) @distro@; urgency=low

  * only check for writable dir

 -- Globus Toolkit <support@globus.org>  Mon, 03 Nov 2014 13:32:12 -0500

globus-simple-ca (4.14-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:29 -0400

globus-simple-ca (4.13-3+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:39 -0400

globus-simple-ca (4.13-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages

 -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:44 -0400

globus-simple-ca (4.13-1+gt6.@distro@) @distro@; urgency=low

  * Merge changes from Mattias Ellert

 -- Globus Toolkit <support@globus.org>  Mon, 09 Jun 2014 14:39:41 -0400

globus-simple-ca (4.12-2+gt6.@distro@) @distro@; urgency=low

  * Set sysconfdir to /etc

 -- Globus Toolkit <support@globus.org>  Wed, 04 June 2014 13:44:41 -0400

globus-simple-ca (4.12-1+gt6.@distro@) @distro@; urgency=low

  * Test fixes
