@@ -2,12 +2,12 @@
 .\"     Title: grid-ca-create
 .\"    Author: [see the "AUTHOR" section]
 .\" Generator: DocBook XSL Stylesheets v1.78.1 <http://docbook.sf.net/>
-.\"      Date: 09/25/2014
+.\"      Date: 07/24/2015
 .\"    Manual: Globus Toolkit Manual
 .\"    Source: University of Chicago
 .\"  Language: English
 .\"
-.TH "GRID\-CA\-CREATE" "1" "09/25/2014" "University of Chicago" "Globus Toolkit Manual"
+.TH "GRID\-CA\-CREATE" "1" "07/24/2015" "University of Chicago" "Globus Toolkit Manual"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -62,6 +62,11 @@ command\&. The second form includes more details\&.
 \fB\-force\fR
 .RS 4
 Overwite existing CA in the destination directory if one exists\&.
+.RE
+.PP
+\fB\-bits BITS\fR
+.RS 4
+Create a CA certificate with a BITS long RSA key [4096]
 .RE
 .PP
 \fB\-noint\fR
