@@ -1,3 +1,9 @@
+globus-simple-ca (4.21-1+gt6.@distro@) @distro@; urgency=low
+
+  * GT-617: Use 4096-bit RSA key for globus-simple-ca
+
+ -- Globus Toolkit <support@globus.org>  Fri, 24 Jul 2015 12:53:51 -0400
+
 globus-simple-ca (4.20-1+gt6.@distro@) @distro@; urgency=low
 
   * Increase default key size
